# raycaster

./: Cargo.toml  README.md
res/: bricks.pdn  door2.pdn  doormetal.pdn  elevator.pdn  shape_editor_test  shape_test.json  shapetest2.txt  stone.pdn
res/images/: krok.pdn  wall1.pdn  warning.pdn
src/: main.rs  oldutil.rs  oldutil2.rs  renderer.rs  util.rs
src/game/: collision.rs  light.rs  map.rs  mod.rs  player.rs  texture.rs
src/util/: mod.rs  shape.rs
